simplify adding multiple executables in example cmake file

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -8,7 +8,6 @@ if(APPLE)
   set(CMAKE_MACOSX_RPATH ON)
 endif(APPLE)
 
-
 if (NOT "$ENV{__PLOTTING_FRAMEWORK_DIR}" STREQUAL "")
   set(PLOTTING_FRAMEWORK $ENV{__PLOTTING_FRAMEWORK_DIR})
   message(STATUS "Found PlottingFramework: ${PLOTTING_FRAMEWORK}")
@@ -19,15 +18,43 @@ endif()
 ################################################################################
 # User Settings:
 ################################################################################
-# Change this part according to your needs...
-set(APP_NAME create)
-set(SRCS
-  CreatePlots.cxx
-)
+# The following two lines can be used to force using one specific root installation
+set(ROOTSYS ~/root/mybuild)
+list(APPEND CMAKE_PREFIX_PATH ${ROOTSYS})
+
+# in case you are a developer of the PlottingFramework you can trigger compiling its source by swiching this option on
 set(IS_FRAMEWORK_DEV OFF)
+
+
 ################################################################################
+# Functions:
+################################################################################
+# helper function to add an executable that is linked to the PlottingFramework
+function(add_plotting_executable APP_NAME)
+  cmake_parse_arguments(PARSE_ARGV 1 APP "" "" "SOURCES;ADD_FILES")
+  if(APP_UNPARSED_ARGUMENTS)
+    message(FATAL_ERROR "Got trailing arguments ${APP_UNPARSED_ARGUMENTS}")
+  endif()
+  add_executable(${APP_NAME} ${APP_SOURCES} ${APP_ADD_FILES})
+  if (IS_FRAMEWORK_DEV)
+    target_link_libraries(${APP_NAME} PlottingFramework)
+  else()
+    target_link_libraries(${APP_NAME} PUBLIC
+      ${PLOTTING_FRAMEWORK_LIB}
+      ROOT::Gui
+      ROOT::Hist
+      ROOT::Gpad
+      Boost::program_options
+      fmt::fmt
+  )
+  endif()
+  message(STATUS "Creating executable ${APP_NAME} from file(s) ${APP_SOURCES} including ${APP_ADD_FILE}")
+endfunction()
 
 
+################################################################################
+# Add dependencies:
+################################################################################
 if (IS_FRAMEWORK_DEV)
   ################################################################################
   # Developer Mode:
@@ -35,8 +62,6 @@ if (IS_FRAMEWORK_DEV)
   # This does not work if the folder lives in the framework hierarchy
   include_directories(${PLOTTING_FRAMEWORK}/inc)
   add_subdirectory(${PLOTTING_FRAMEWORK} ${PLOTTING_FRAMEWORK}/build)
-  add_executable(${APP_NAME} ${SRCS})
-  target_link_libraries(${APP_NAME} PlottingFramework)
 else()
   ################################################################################
   # User Mode:
@@ -64,15 +89,15 @@ else()
     set(CMAKE_MACOSX_RPATH ON)
     string(REPLACE ".so" ".dylib" PLOTTING_FRAMEWORK_LIB "${PLOTTING_FRAMEWORK_LIB}")
   endif(APPLE)
-
-  # create and link executable
-  add_executable(${APP_NAME} ${SRCS})
-  target_link_libraries(${APP_NAME} PUBLIC
-    ${PLOTTING_FRAMEWORK_LIB}
-    ROOT::Gui
-    ROOT::Hist
-    ROOT::Gpad
-    Boost::program_options
-    fmt::fmt
-  )
 endif()
+
+################################################################################
+# Add plotting executables:
+################################################################################
+# Here you can add as many plotting programs as you need
+
+add_plotting_executable(create
+  SOURCES CreatePlots.cxx
+)
+
+################################################################################
